crates/taut-rpc-macros/tests/ui/multi-arg-fail.rs
use taut_rpc::rpc;

#[rpc]
async fn add(a: i32, b: i32) -> i32 {
    a + b
}

fn main() {}
